@@ -12,6 +12,8 @@ synaptic (0.63.1) UNRELEASEDunstable; urgency=low
       operation
   * gtk/rgdebinstallprogress.cc:
     - on error, set error string into status label
+    - when the recovery is run (dpkg --configure -a) display a 
+      proper status label for that
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Dec 2009 10:22:56 +0100
 
